entity_macros/tests/ui/derive/ent/unsupported-tuple-struct.stderr
error: Expected named fields
 --> $DIR/unsupported-tuple-struct.rs:4:1
  |
4 | struct TestEnt(
  | ^^^^^^
